--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <script src="charts/boxPlot.js"></script>
   <script src="charts/barChart.js"></script>
   <script src="charts/pieChart.js"></script>
-
+  <script src="charts/lineChart.js"></script>
   <!-- angular -->
   <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
