--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
   <script src="charts/barChart.js"></script>
   <script src="charts/pieChart.js"></script>
   <script src="charts/lineChart.js"></script>
+  <script src="charts/pumpkinChart.js"
   <!-- angular -->
   <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
