Got row highlighting in table to work

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   <!-- codemirror -->
   <script type="text/javascript" src="bower_components/codemirror/lib/codemirror.js"></script>
   <script type="text/javascript" src="bower_components/codemirror/addon/display/placeholder.js"></script>
+  <script type="text/javascript" src="bower_components/codemirror/addon/selection/active-line.js"></script>
   <!-- canvastoblob -->
   <script type="text/javascript" src="bower_components/canvas-toBlob.js/canvas-toBlob.js"></script>
   <!-- filesaver -->
