found way to access table row data

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body data-spy="scroll" data-target="#raw-nav">
 
-  <header class="navbar navbar-static-top" role="navigation" id="raw-nav" role="banner">
+  <!-- <header class="navbar navbar-static-top" role="navigation" id="raw-nav" role="banner">
     <div class="container">
      <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#raw-navbar">
@@ -63,10 +63,10 @@
         </ul>
       </nav>
 
-      <!--<span class="pull-left">The missing link between spreadsheets and vector graphics</span class="pull-left">-->
+      <!--<span class="pull-left">The missing link between spreadsheets and vector graphics</span class="pull-left">
 
     </div>
-  </header>
+  </header> -->
 
   <div ng-view class="wrap"></div>
 
@@ -121,7 +121,7 @@
   <script src="charts/streamgraph.js"></script>
   <script src="charts/scatterPlot.js"></script>
   <script src="charts/packing.js"></script>
-  <script src="charts/clusterDendrogram.js"></script>
+<!--   <script src="charts/clusterDendrogram.js"></script>
   <script src="charts/voronoi.js"></script>
   <script src="charts/delaunay.js"></script>
   <script src="charts/alluvial.js"></script>
@@ -137,7 +137,7 @@
   <script src="charts/horizon.js"></script>
   <script src="charts/boxPlot.js"></script>
   <script src="charts/barChart.js"></script>
-  <script src="charts/pieChart.js"></script>
+  <script src="charts/pieChart.js"></script>  -->
 
   <!-- angular -->
   <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
