--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   <script src="charts/streamgraph.js"></script>
   <script src="charts/scatterPlot.js"></script>
   <script src="charts/packing.js"></script>
+  <script src="charts/histogram.js"></script>
 <!--   <script src="charts/clusterDendrogram.js"></script>
   <script src="charts/voronoi.js"></script>
   <script src="charts/delaunay.js"></script>
