Added mosaic plot

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
   <script src="charts/packing.js"></script>
   <script src="charts/spiral.js"></script>
   <script src="charts/histogram.js"></script>
+  <script src="charts/mosaic.js"></script>
 
   <!--   <script src="charts/clusterDendrogram.js"></script>
   <script src="charts/forceDirected.js"></script>
