--- a/index.html
+++ b/index.html
@@ -94,15 +94,20 @@
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.min.js"></script>
   <script type="text/javascript" src="bower_components/jqueryui-touch-punch/jquery.ui.touch-punch.min.js"></script>
+  
   <!-- bootstrap -->
   <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
+  
   <!-- d3 -->
   <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
   <script type="text/javascript" src="bower_components/d3-plugins/sankey/sankey.js"></script>
   <script type="text/javascript" src="bower_components/d3-plugins/hexbin/hexbin.js"></script>
   <script type="text/javascript" src="bower_components/d3-plugins-density/horizon.js"></script>
   <script type="text/javascript" src="bower_components/d3-plugins/box/box.js"></script>
+  
+  <!-- topojson -->
+  <script src="//d3js.org/topojson.v1.min.js"></script>
   
   <!-- codemirror -->
   <script type="text/javascript" src="bower_components/codemirror/lib/codemirror.js"></script>
@@ -125,8 +130,8 @@
   <script src="charts/spiral.js"></script>
   <script src="charts/histogram.js"></script>
   <script src="charts/mosaic.js"></script>
-
-  <!--   <script src="charts/clusterDendrogram.js"></script>
+  <script src="charts/candlestick.js"></script>
+  <script src="charts/clusterDendrogram.js"></script>
   <script src="charts/forceDirected.js"></script>
   <script src="charts/voronoi.js"></script>
   <script src="charts/delaunay.js"></script>
@@ -143,7 +148,7 @@
   <script src="charts/horizon.js"></script>
   <script src="charts/boxPlot.js"></script>
   <script src="charts/barChart.js"></script>
-  <script src="charts/pieChart.js"></script>  -->
+  <script src="charts/pieChart.js"></script>
 
   <!-- angular -->
   <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
