--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <script type="text/javascript" src="bower_components/d3-plugins/hexbin/hexbin.js"></script>
   <script type="text/javascript" src="bower_components/d3-plugins-density/horizon.js"></script>
   <script type="text/javascript" src="bower_components/d3-plugins/box/box.js"></script>
-  
+
   <!-- codemirror -->
   <script type="text/javascript" src="bower_components/codemirror/lib/codemirror.js"></script>
   <script type="text/javascript" src="bower_components/codemirror/addon/display/placeholder.js"></script>
@@ -124,7 +124,7 @@
   <script src="charts/packing.js"></script>
   <script src="charts/spiral.js"></script>
   <script src="charts/histogram.js"></script>
-
+  <script src="charts/forceDirected.js"></script>
   <!--   <script src="charts/clusterDendrogram.js"></script>
   <script src="charts/forceDirected.js"></script>
   <script src="charts/voronoi.js"></script>
